--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	
 
 	
-	bar.style.width = bar.innerHTML  =  Math.floor(percent) + "%";
+	bar.style.width = bar.innerHTML  = percent + "%";
 
 	</script>
   </body>
